tests/Should_fail/4_Control_Structures/04_ForBool.decaf
class Test{
	void main(){
		boolean b;
		for b = false, true	
		{
			WriteString("0=1");
			WriteString("\n");
		}
	}
}